# bildbasierte_modellierung

./: .gitignore  LICENSE  README.md
ex2/: CMakeLists.txt  ex02.cpp  ex2.html  ex2.ipynb
ex2/.ipynb_checkpoints/: ex2-checkpoint.ipnb  ex2-checkpoint.ipynb
ex3/: CMakeLists.txt  ex03.cpp  ex3.ipynb
ex3/.ipynb_checkpoints/: ex3-checkpoint.ipynb
